# ThoraxNet

./: .env.example  .gitignore  BLOG_POST.md  CHANGELOG.md  MODEL_CARD.md  OPTIMIZATION_RUNBOOK.md  README.md  baseline_v1.0.0.json  pyproject.toml  requirements-ci.txt  requirements.txt  results_full.json  results_v1.1.0.json
.github/workflows/: ci.yml
api/: inference.py  main.py  schemas.py
api/routes/: health.py  predict.py
configs/: config.yaml
data/: __init__.py  dataset.py  transforms.py
docker/: Dockerfile
explainability/: gradcam.py
fairness/: audit.py
frontend/: MODEL_CARD_HF.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/public/: manifest.json
frontend/src/components/: FindingsPanel.tsx  Layout.tsx  ReportViewer.tsx  UncertaintyChart.tsx  XRayUploader.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: _app.tsx  index.tsx  login.tsx  profile.tsx  scan.tsx  stats.tsx
frontend/src/pages/api/auth/: [...nextauth].ts
frontend/src/styles/: globals.css
models/: __init__.py  backbone.py  classifier.py  uncertainty.py
notebooks/: training_kaggle.ipynb
report_generation/: generator.py
scripts/: benchmark.py  deploy_spaces.py  eval_quantization.py  export_onnx.py
tests/: test_api_contract.py  test_gradcam_cache.py  test_metrics.py  test_model.py  test_uncertainty_batching.py
training/: __init__.py  losses.py  metrics.py  trainer.py
