[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"
[project]
name = "chestai"
version = "1.0.0"
description = "Uncertainty-aware chest X-ray diagnostic AI"
requires-python = ">=3.11"
[tool.ruff]
line-length = 100
target-version = "py311"

# Notebooks are exploratory scratch space — semicolons, re-imports across cells
# and shell magics are normal there and linting them produces noise, not signal.
extend-exclude = ["notebooks", ".venv", "export"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Put the repo root on sys.path so `from models... import ...` resolves without
# installing the project. Bare `pytest` does NOT add the working directory to
# sys.path (only `python -m pytest` does), so without this the suite passes
# locally and fails in CI purely on invocation style.
pythonpath = ["."]
